# memsgauge

./: .gitignore  CMakeLists.txt  ProjectHome.md  README  aboutbox.cpp  aboutbox.h  commonunits.h  help.html  help.html.in  helpviewer.cpp  idleaircontroldialog.cpp  idleaircontroldialog.h  logger.cpp  logger.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  memsinterface.cpp  memsinterface.h  mxe-win32-build.sh  optionsdialog.cpp  optionsdialog.h  resources.qrc.in  serialdevenumerator.cpp
